# AutonomousFactoryEnvironment

./: README.md
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/mobile_robot/: controllerNode  controller_node  odometryNode  odometry_node
devel/lib/pkgconfig/: factoryMobileRobot.pc  mobile_robot.pc  trajectory.pc
devel/lib/trajectory/: testEnvironment  trajectory  wayPoints
devel/share/factoryMobileRobot/cmake/: factoryMobileRobotConfig.cmake
devel/share/mobile_robot/cmake/: mobile_robotConfig.cmake
devel/share/roseus/ros/trajectory/: manifest.l
devel/share/trajectory/cmake/: trajectory-msg-extras.cmake  trajectory-msg-paths.cmake  trajectoryConfig.cmake
src/mobile_robot/: CMakeLists.txt  package.xml
src/mobile_robot/config/: control.yaml
src/mobile_robot/launch/: gazebo.launch  run.launch
src/mobile_robot/meshes/: backCaster_link.STL  base_Link.STL  frontCaster_link.STL  leftWheel_link.STL  outerBody_link.STL  rightWheel_link.STL  tray_link.STL
src/mobile_robot/src/: controller.cpp  ekfOdometry.cpp  odometry.cpp  pidController.cpp
src/mobile_robot/urdf/: mobile_robot.urdf
src/trajectory/: CMakeLists.txt  package.xml
src/trajectory/src/: testEnvironment.cpp  trajectory.cpp  wayPoints.cpp
